[package]
name = "blur-test-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_dummy_plugin"
crate-type = ["cdylib"]

[dependencies]
blur-plugins-core = { git = "https://github.com/tobii-dev/blur-plugins-core", version = "0.1.1" }
log = "0.4.20"
simplelog = "0.12.1"
